[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]

bevy = { version = "0.6" }


#bevy = { version = "0.6", default-features = false, features = [
#    "bevy_render",
#    "bevy_winit",
#    "bevy_core_pipeline",
#    "x11",
#	"png"
#] }

egui = "0.16"
#webbrowser = { version = "0.5.5", optional = true }
winit = { version = "0.26.0", features = ["x11"], default-features = false }
#bytemuck = { version = "1.7.0", features = ["derive"] }
#wgpu = "0.12.0"
#rfd = "0.8.1"
#futures-lite = "1.12.0"
image = "0.24.1"
#serde = "1.0.117"
#anyhow = "1.0.56"

rand = "0.7.3"
lerp = "0.4"

# this should be in a debug fetaure
bevy-inspector-egui = "0.8"





[patch.crates-io]
bevy = { path = "../../bevy" }
