[package]
name = "tetris"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

bevy = { version = "0.7" }

egui = "0.16"
winit = { version = "0.26.0", features = ["x11"], default-features = false }
rand = "0.7.3"
lerp = "0.4"

# this should be in a debug feature
bevy-inspector-egui = "0.10"
